docs: adding docs for last enpoints
