# cmd/api/comments.go
@@ -10,6 +10,20 @@ type createCommentPayload struct {
 	Content string `json:"content" validate:"required,max=1000"`
 }
 
+// CreateComment godoc
+//
+//	@Summary		Create Comment
+//	@Description	Create user comment in post
+//	@Tags			comments
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		createCommentPayload	true	"Create Comment Payload"
+//	@Success		201		{object}	store.Comment
+//	@Failure		400		{object}	error	"Comment payload missing"
+//	@Failure		404		{object}	error	"Post not found"
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{id}/comment [post]
 func (app *application) createCommentHandler(w http.ResponseWriter, r *http.Request) {
 	post := getPostFromCtx(r)
 	var payload createCommentPayload
