# docs/swagger.yaml
@@ -8,6 +8,14 @@ definitions:
         maxLength: 100
         type: string
     type: object
+  main.createCommentPayload:
+    properties:
+      content:
+        maxLength: 1000
+        type: string
+    required:
+    - content
+    type: object
   main.createPostPayload:
     properties:
       content:
@@ -66,6 +74,35 @@ definitions:
       version:
         type: integer
     type: object
+  store.PostWithMetadata:
+    properties:
+      comment_count:
+        type: integer
+      comments:
+        items:
+          $ref: '#/definitions/store.Comment'
+        type: array
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/store.User'
+      user_id:
+        type: integer
+      version:
+        type: integer
+    type: object
   store.User:
     properties:
       created_at:
@@ -89,6 +126,21 @@ info:
   termsOfService: http://swagger.io/terms/
   title: GohperSocial API
 paths:
+  /health:
+    get:
+      description: Check server status
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Check server health
+      tags:
+      - ops
   /posts:
     post:
       consumes:
@@ -152,8 +204,6 @@ paths:
       tags:
       - posts
     get:
-      consumes:
-      - application/json
       description: Get a user post with Post ID
       parameters:
       - description: Post ID
@@ -208,10 +258,41 @@ paths:
       summary: Update a Post
       tags:
       - posts
-  /users/{id}:
-    get:
+  /posts/{id}/comment:
+    post:
       consumes:
       - application/json
+      description: Create user comment in post
+      parameters:
+      - description: Create Comment Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.createCommentPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/store.Comment'
+        "400":
+          description: Comment payload missing
+          schema: {}
+        "404":
+          description: Post not found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Create Comment
+      tags:
+      - comments
+  /users/{id}:
+    get:
       description: Fetches a user profile by ID
       parameters:
       - description: User ID
@@ -240,6 +321,58 @@ paths:
       summary: Fetches a user profile
       tags:
       - users
+  /users/feed:
+    get:
+      description: Fetches the user feed
+      parameters:
+      - description: Since
+        in: query
+        name: since
+        type: string
+      - description: Until
+        in: query
+        name: until
+        type: string
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      - description: Sort
+        in: query
+        name: sort
+        type: string
+      - description: Tags
+        in: query
+        name: tags
+        type: string
+      - description: Search
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.PostWithMetadata'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Fetches the user feed
+      tags:
+      - feed
   /users/follow/{id}:
     put:
       consumes:
